<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:paddingBottom="4dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="4dp"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:scaleType="center"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/image_corner_maker"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:id="@+id/preview_question"
            android:layout_marginRight="16dp"
            android:src="@drawable/wrench_q"
            />
       <com.example.mechanic2.views.MyTextView
            android:textColor="@color/purple"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="2dp"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textSize="20sp"
            android:layout_toEndOf="@id/preview_question"
            style="@style/TextAppearance.Subhead.Bold"
            android:id="@+id/title_question"
            />

        <com.example.mechanic2.views.MyTextView
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/grey_1000"
            android:layout_marginEnd="16dp"
            android:layoutDirection="rtl"
            android:gravity="right"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_question"
            android:layout_toEndOf="@id/preview_question"
            android:text="@string/lorem_simple"
            android:layout_marginBottom="32dp"
            android:lines="2"
            android:id="@+id/description_question"
            android:ellipsize="end"
            />

        <LinearLayout
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layoutDirection="rtl"
            android:layout_below="@id/preview_question"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="top"
                android:layout_marginTop="6dp"
                android:id="@+id/seen_icon"
                android:tint="@color/indigo_900"
                android:src="@drawable/ic_remove_red_eye_black_24dp"
                android:layout_marginLeft="4dp"
                />

            <com.example.mechanic2.views.MyTextView
                android:id="@+id/seen_count"
                android:textColor="@color/indigo_900"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="top"
                />


            <ImageView
                android:layout_marginRight="24dp"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/answer_icon"
                android:tint="@color/indigo_900"
                android:layout_gravity="top"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_question_answer_black_24dp"
                android:layout_marginLeft="4dp"
                />

            <com.example.mechanic2.views.MyTextView
                android:id="@+id/answer_count"
                android:textColor="@color/indigo_900"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="248"
                android:layout_gravity="top"
                android:textSize="14sp"
                android:layout_marginEnd="4dp" />

            <com.example.mechanic2.views.MyTextView
                android:id="@+id/car_type"
                android:textColor="@color/indigo_900"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="نوع خودرو:"
                android:layout_alignBaseline="@id/car_name"
                android:layout_toLeftOf="@id/answer_count"
                android:textSize="12sp"
                android:layout_marginRight="24dp"
                android:layout_alignTop="@id/answer_icon"
                />

            <com.example.mechanic2.views.MyTextView
                android:id="@+id/car_name"
                android:textColor="@color/indigo_900"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:maxLines="2"
                android:layout_below="@id/preview_question"
                android:layout_toLeftOf="@id/car_type"
                android:textSize="16sp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                />


        </LinearLayout>





        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_60"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            />

    </RelativeLayout>






</LinearLayout>